2025-09-04
  USS Enterprise '66
    - Add illumination
2025-09-02
  USS Bon Homme Richard and Generic Essex SCB125
    - Park in reverse, 8 planes work, more congestion happens
2025-08-19
  MiG-21MF
    - Removed strange vertexes below the nose cone
2025-08-15
  Ships
    - Fixed some shell range setting.
    - Add Recoil animation to all cannon, over 100 barrel's animation and rigging
    - Fixed the issue twin barrel mount dual-purpose guns only shoot with one barrel
    - Change short name of ships 
  USS Maddox TI  
    - Fixed Maddox TI front FCS not proper rotatio
  Knox class
    - Adjusted the Knox-class hull to reduce strange light and shadow
2025-07-25
  Overhaul Skins and Themes for icons and names
2025-07-24
  A-37 Dragonfly
    - Add distance lods
  CVAN-65 Enterprise 1966
    - Add distance lods
2025-07-19
  Add more known limitations to README.md
  A-37 Dragonfly
    - Fix wing vapour
    - Remove flyability
  SH-2/UH-2 Seasprite
    - Add tasks, transport and recon
    - Remove antiship-strike task from UH-2s
  CVA-31 Bon Homme Richard
    - Add arresting gear carrier to categories
2025-07-17
  CVAN-65 Enterprise 1966 
    - Overhaul all routes
    - Model improvements  
2025-07-16
  A-1 Skyraider
    - Fix toilet bomb position on pylon
  CVAN-65 Enterprise 1966 
    - New Runway and Routes files
    - Reworked catapults
2025-07-14
  CVAN-65 Enterprise 1966 
    - Move elevator 3 parking pos 1meter forward
    - Clean attributes in main config
    - Fix model problems
    - Reduce complexity of collision shell
  O-1 Bird Dog
    - Add engine nozzle def, otherwise F-14 Tomcat will CTD
2025-07-13
  BB-62 New Jersey
    - Use specific custom shell for main armamanet
  CVAN-65 Enterprise 1966 
    - Adjust take-off angles in runway and routes file
    - Change parking position speeds
    - Model adjustments
2025-07-12
  A-1 Skyraider
    - Split into AD-4 (no bridle) and A-1H (bridle)
    - Add A-4E-C Napalm bombs
    - Add toilet bombs to all pylons