@@ -1,5 +1,5 @@
 Vietnam War Vessels by TeTeT
-2.0.1
+2.0.2
 
 
 This mod is released under the Creative Commons Attribution-NonCommercial-ShareAlike license, see LICENSE.md for details
