@@ -3,4 +3,4 @@ livery = {
 	
 	{"cv31_ship_registry_number",	DIFFUSE			,	"cv31_ship_registry_number.dds", false};
 }
-name="CVA-14 USS TICONDEROGA"
+name="(CVA-14) USS Ticonderoga"
