@@ -3,4 +3,4 @@ livery = {
 	
 	{"cv31_ship_registry_number",	DIFFUSE			,	"cv31_ship_registry_number.dds", false};	
 }
-name="CV-16 USS LEXINGTON"
+name="(CVA-16) USS Lexington"
