@@ -3,4 +3,4 @@ livery = {
 	
 	{"cv31_ship_registry_number",	DIFFUSE			,	"cv31_ship_registry_number.dds", false};	
 }
-name="CVA-34 USS ORISKANY"
+name="(CVA-34) USS Oriskany"
