@@ -3,7 +3,7 @@ declare_plugin("jjj_mullany_67",
 dirName		  = current_mod_path,
 displayName   = _("USS Mullany"),
 shortName	  = "Mullany",
-version		  = "2.0.1",
+version		  = "2.0.2",
 state		  = "installed",
 fileMenuName  = _("vwv Mullany"),
 developerName = "TeTeT, James J Jackson",
