@@ -2,7 +2,7 @@ livery = {
 	{"Sumner_ship_registry_number",	DIFFUSE			,"Moale_ship_registry_number", false};
 }
 
-name = "DD-693 Moale"
+name = "(DD-693) USS Moale"
 
 countries = {
     "USA",
