@@ -3,7 +3,7 @@ declare_plugin("tetet_sumner_64",
 dirName		  = current_mod_path,
 displayName   = _("USS Allen M. Sumner"),
 shortName	  = "Sumner",
-version		  = "2.0.1",
+version		  = "2.0.2",
 state		  = "installed",
 fileMenuName  = _("vwv_Allen_M_Sumner"),
 developerName = "TeTeT",
