@@ -3,7 +3,7 @@ declare_plugin("tetet_laffey_64",
 dirName		  = current_mod_path,
 displayName   = _("USS Laffey"),
 shortName	  = "Laffey",
-version		  = "2.0.1",
+version		  = "2.0.2",
 state		  = "installed",
 fileMenuName  = _("vwv_Laffey"),
 developerName = "TeTeT",
