@@ -3,7 +3,7 @@ declare_plugin("jjj_forrest_sherman_67",
 dirName		  = current_mod_path,
 displayName   = _("USS Forrest Sherman"),
 shortName	  = "Sherman",
-version		  = "2.0.1",
+version		  = "2.0.2",
 state		  = "installed",
 fileMenuName  = _("vwv Forrest Sherman"),
 developerName = "TeTeT, James J Jackson",
