@@ -8,7 +8,7 @@ livery =
 --[[ name your own skin in default language (en)
      meanwhile, you can also name the skin in more than one languages,
      replace xx by [ru, cn, cs, de, es, fr, or it] ]]
-name = "USS Turner Joy (DD-951)"
+name = "(DD-951) USS Turner Joy"
 --name_xx = ""
 --[[ assign the countries
      if you want no country limitation,
