@@ -3,7 +3,7 @@ declare_plugin("jjj_bigelow_67",
 dirName		  = current_mod_path,
 displayName   = _("USS Bigelow"),
 shortName	  = "Bigelow",
-version		  = "2.0.1",
+version		  = "2.0.2",
 state		  = "installed",
 fileMenuName  = _("vwv Bigelow"),
 developerName = "James J Jackson",
