@@ -3,7 +3,7 @@ declare_plugin("jjj_Knox_72",
 dirName		  = current_mod_path,
 displayName   = _("USS Knox"),
 shortName	  = "Knox",
-version		  = "2.0.1",
+version		  = "2.0.2",
 state		  = "installed",
 fileMenuName  = _("vwv Knox"),
 developerName = "James J Jackson",
