@@ -3,7 +3,7 @@ declare_plugin("jjj_Gray_73",
 dirName		  = current_mod_path,
 displayName   = _("USS Gray"),
 shortName	  = "Gray",
-version		  = "2.0.1",
+version		  = "2.0.2",
 state		  = "installed",
 fileMenuName  = _("vwv Gray"),
 developerName = "James J Jackson",
