@@ -3,7 +3,7 @@ declare_plugin("jjj_Kirk_75",
 dirName		  = current_mod_path,
 displayName   = _("USS Kirk"),
 shortName	  = "Kirk",
-version		  = "2.0.1",
+version		  = "2.0.2",
 state		  = "installed",
 fileMenuName  = _("vwv Kirk"),
 developerName = "James J Jackson",
